tests/positive/control_flow.ax
module control_flow;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    var x: i32 = 0;
    while x < 3 {
        x = x + 1;
        if x == 2 {
            continue;
        }
    }
    return x;
}
