tests/negative/void_local.ax
module void_local;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    let x: void = 0;
    return 0;
}
